# SDR-PLUTO-

./: LICENSE  README.md  gui_app.py  main.py  pluto_manager.py  pyproject.toml  requirements.txt
app/core/: config.py  events.py  logger.py  types.py  utils.py
app/drivers/: pluto_base.py  pluto_mock.py  pluto_plus.py
app/dsp/: iqio.py  resampler.py  spectrum.py  wavegen.py
app/services/: profiles.py  rx_pipeline.py  session.py  tx_pipeline.py
app/ui/: console_panel.py  device_panel.py  device_svg.py  main.py  main_window.py  spectrum_panel.py  tx_control_panel.py  waveform_panel.py
cli/: cli.py
configs/: default.yaml
dsp/: analyzer.py  generator.py
examples/: chamber_bringup.yaml
resources/: style.qss
sdr_pluto_app/: __init__.py  device_controller.py  gui.py  main.py  signal_processing.py
tabs/: tab_spectrum.py  tab_timevis.py  tab_transmitter.py  tab_waveform.py
tests/: test_resampler.py  test_wavegen.py
widgets/: big_label.py  controls.py
